api: add registry/workflow api endpoints
